bitfield/tests/09-variant-out-of-range.stderr
error[E0277]: the trait bound `checks::False: checks::DiscriminantInRange` is not satisfied
  --> tests/09-variant-out-of-range.rs:17:5
   |
17 |     External,
   |     ^^^^^^^^ the trait `checks::DiscriminantInRange` is not implemented for `checks::False`
   |
   = help: the trait `checks::DiscriminantInRange` is implemented for `True`
note: required by a bound in `bitfield::checks::Discriminant`
  --> src/checks.rs
   |
   | pub struct Discriminant<T>(PhantomData<T>)
   |            ------------ required by a bound in this struct
...
   |     <T as DiscriminantInRangeRenameType>::CheckType: DiscriminantInRange;
   |                                                      ^^^^^^^^^^^^^^^^^^^ required by this bound in `Discriminant`
